--- a/index.html
+++ b/index.html
@@ -40,16 +40,23 @@
                 <source srcset="
                     ./img/smartphone/banner_index_smartphone.webp 1x,
                     ./img/smartphone/banner_index_smartphone@2x.webp 2x,
-                    ./img/smartphone/banner_index_smartphone@3x.webp 3x"
+                    ./img/smartphone/banner_index_smartphone@3x.webp 3x,
+                    ./img/smartphone/banner_index_smartphone.jpg 1x,
+                    ./img/smartphone/banner_index_smartphone@2x.jpg 2x,
+                    ./img/smartphone/banner_index_smartphone@3x.jpg 3x"
                     media="(min-width: 200px) and (max-width: 767px)">
                 <source srcset="
                     ./img/ipad/banner_index_ipad.webp 1x,
-                    ./img/ipad/banner_index_ipad@2x.webp 2x"
+                    ./img/ipad/banner_index_ipad@2x.webp 2x,
+                    ./img/ipad/banner_index_ipad.jpg 1x,
+                    ./img/ipad/banner_index_ipad@2x.jpg 2x"
                     media="(min-width: 768px) and (max-width: 1023px)">
                 <source srcset="
                     ./img/desktop/banner_index_desktop.webp 1x,
-                    ./img/desktop/banner_index_desktop@2x.webp 2x"
-                    media="(min-width: 1024px) and (max-width: 2000px)">
+                    ./img/desktop/banner_index_desktop@2x.webp 2x,
+                    ./img/desktop/banner_index_desktop.jpg 1x,
+                    ./img/desktop/banner_index_desktop@2x.jpg 2x"
+                    media="(min-width: 1024px)">
                 <img src="" alt="Cuchara" class="banner">
             </picture>
         
