--- a/recetas.html
+++ b/recetas.html
@@ -40,16 +40,23 @@
         <source srcset="
         ./img/smartphone/banner_recetas_smartphone.webp 1x,
         ./img/smartphone/banner_recetas_smartphone@2x.webp 2x,
-        ./img/smartphone/banner_recetas_smartphone@3x.webp 3x"
+        ./img/smartphone/banner_recetas_smartphone@3x.webp 3x,
+        ./img/smartphone/banner_recetas_smartphone.jpg 1x,
+        ./img/smartphone/banner_recetas_smartphone@2x.jpg 2x,
+        ./img/smartphone/banner_recetas_smartphone@3x.jpg 3x"
         media="(min-width: 200px) and (max-width: 767px)">
     <source srcset="
         ./img/ipad/banner_recetas_ipad.webp 1x,
-        ./img/ipad/banner_recetas_ipad@2x.webp 2x"
+        ./img/ipad/banner_recetas_ipad@2x.webp 2x,
+        ./img/ipad/banner_recetas_ipad.jpg 1x,
+        ./img/ipad/banner_recetas_ipad@2x.jpg 2x"
         media="(min-width: 768px) and (max-width: 1023px)">
     <source srcset="
         ./img/desktop/banner_recetas_desktop.webp 1x,
-        ./img/desktop/banner_recetas_desktop@2x.webp 2x"
-        media="(min-width: 1024px) and (max-width: 2000px)">
+        ./img/desktop/banner_recetas_desktop@2x.webp 2x,
+        ./img/desktop/banner_recetas_desktop.jpg 1x,
+        ./img/desktop/banner_recetas_desktop@2x.jpg 2x"
+        media="(min-width: 1024px)">
         <img src="" alt="Cocinero" class="banner">
     </picture>
 
