--- a/login.html
+++ b/login.html
@@ -38,11 +38,11 @@
 
     <main>
         <h1 class="titulo login">Inicia sesión</h1>
-        <section class="contenedor_login">
+        <form class="contenedor_login">
             <input type="email" class="input" placeholder="Email">
             <input type="password" class="input" placeholder="Password">
             <input type="submit" value="Enviar" class="submit">
-        </section>
+        </form>
 
         <section class="sugerencia_registro">
             <p class="texto">
