--- a/registrarse.html
+++ b/registrarse.html
@@ -38,14 +38,14 @@
 
     <main>
         <h1 class="titulo login">Crea una cuenta</h1>
-        <section class="contenedor_registro">
+        <form class="contenedor_registro">
             <input type="text" class="input" placeholder="Nombre">
             <input type="text" class="input" placeholder="Apellidos">
             <input type="email" class="input" placeholder="Email">
             <input type="password" class="input" placeholder="Password">
             <input type="password" class="input" placeholder="Repeat Password">
             <input type="submit" value="Enviar" class="submit">
-        </section>
+        </form>
 
         <section class="sugerencia_registro">
             <p class="texto">
