--- a/login.html
+++ b/login.html
@@ -39,8 +39,15 @@
     <main>
         <h1 class="titulo login">Inicia sesión</h1>
         <form class="contenedor_login">
-            <input type="email" class="input" placeholder="Email">
-            <input type="password" class="input" placeholder="Password">
+            <div class="grupo_formulario">
+                <input type="email" class="input" placeholder="Email" id="email" name="email">
+            </div>
+
+            <div class="grupo_formulario">
+                <input type="password" class="input" placeholder="Password" id="password" name="password">
+            </div>
+            
+            
             <input type="submit" value="Enviar" class="submit">
         </form>
 
