--- a/login.html
+++ b/login.html
@@ -47,8 +47,10 @@
                 <input type="password" class="input" placeholder="Password" id="password" name="password">
             </div>
             
+            <div class="contenedor_submit">
+                <input type="submit" value="Enviar" class="submit">
+            </div>
             
-            <input type="submit" value="Enviar" class="submit">
         </form>
 
         <section class="sugerencia_registro">
