--- a/registrarse.html
+++ b/registrarse.html
@@ -65,7 +65,10 @@
                 <article class="grupo_formulario-error" id="grupo_formulario-error">Las contraseñas no coinciden</article>
             </div>
 
-            <input type="submit" value="Enviar" class="submit" id="submit">
+            <div class="contenedor_submit">
+                <input type="submit" value="Enviar" class="submit" id="submit">
+            </div>
+            
         </form>
 
         <section class="sugerencia_registro">
