Validacion de formularios casi terminada

--- a/registrarse.html
+++ b/registrarse.html
@@ -38,7 +38,7 @@
 
     <main>
         <h1 class="titulo login">Crea una cuenta</h1>
-        <form  action="login.html" class="contenedor_registro" id="form_registro" method="post">
+        <form action="login.html" class="contenedor_registro" id="form_registro">
             
             <div class="grupo_formulario" id="grupo_nombre">
                 <input type="text" class="input" placeholder="Nombre*" id="nombre" name="nombre">
@@ -57,7 +57,7 @@
 
             <div class="grupo_formulario" id="grupo_password">
                 <input type="password" class="input" placeholder="Password*" id="password" name="password" required>
-                <article class="grupo_formulario-error" id="grupo_formulario-error">La contraseña debe contener letras mayúsculas y minúsculas, números y carácteres especiales</article>
+                <article class="grupo_formulario-error" id="grupo_formulario-error">La contraseña debe tener 8 carácteres, contener letras mayúsculas y minúsculas, números y carácteres especiales</article>
             </div>
 
             <div class="grupo_formulario" id="grupo_repeat_password">
